@@ -522,12 +522,25 @@ bool CIrrDeviceLinux::createWindow()
 		XWindow = (Window)CreationParams.WindowId;
 		if (!CreationParams.IgnoreInput)
 		{
-			XCreateWindow(XDisplay,
+			// Note: This might be further improved by using a InputOnly window instead of InputOutput.
+			// I think then it should be possible to render into the given parent window instead of
+			// creating a child-window.
+			// That could also be a third option for IgnoreInput in the CreationParams.
+			// But we need another window variable then and have to split input/output in
+			// the rest of the device code.
+			// Also... this does possibly leak.
+			Window child_window = XCreateWindow(XDisplay,
 					XWindow,
 					0, 0, Width, Height, 0, VisualInfo->depth,
 					InputOutput, VisualInfo->visual,
 					CWBorderPixel | CWColormap | CWEventMask,
 					&WndAttributes);
+
+			// do not forget to map new window
+			XMapWindow(XDisplay, child_window);
+
+			// overwrite device window id
+			XWindow = child_window;
 		}
 		XWindowAttributes wa;
 		XGetWindowAttributes(XDisplay, XWindow, &wa);
